# My-demo-U-Net

./: .dockerignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  demo.py  main.py  pyproject.toml  pyvenv.cfg  requirements_prod.txt
.github/workflows/: python-package.yml
demo/: __init__.py  demo.py  web_demo.py
demo/tests/: demo_tests.py  test_demo.py
hooks/: pre-commit
tests/: demo_tests.py
