[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Maria Batrakova <simmura@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "empty"
opencv-python = "~4.5.5"
tensorflow = "~2.8.0"
black = "^22.3.0"
pre-commit = "^2.18.1"
pylint = "^2.13.7"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
mydemo = 'demo.demo:demo_main'

[tool.setuptools.packages.find]
py-modules = []
where = ["."] 
include = []
exclude = []
namespaces = false 

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

