[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Maria Batrakova <simmura@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "empty"
opencv-python = "~4.5.5"
tensorflow = "~2.8.2"
black = "^22.3.0"
pre-commit = "^2.19.0"
pylint = "^2.13.9"
pytest = "^7.1.2"
Pillow = "^9.1.1"
streamlit = "^1.9.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
mydemo = 'demo.demo:demo_main'

[tool.setuptools.packages.find]
py-modules = []
where = ["."] 
include = []
exclude = []
namespaces = false 

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

